<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="hxchen.sg.edu.ntu.a05switchscreens.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/go_get_the_name"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onGetNameClick"
        android:text="@string/go_get_it" />

    <TextView
        android:id="@+id/users_name_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name_was"
        android:textStyle="bold" />
</LinearLayout>
