<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/users_name_edittext"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/users_name_edittext"
            android:text="@string/enter_your_name" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSendUserName"
            android:text="@string/enter" />

        <TextView
            android:id="@+id/calling_info_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calling_activity" />

    </LinearLayout>

</LinearLayout>